--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ai-sdk/openai": "^1.3.22",
     "ai": "^4.3.15",
     "dotenv": "^16.5.0",
+    "duckdb": "^1.2.1",
     "zod": "^3.24.4"
   }
 }
